feat: [stabled] [work] [tested] Quick JSON is working fine in this commit